update ChoosePosition.java addes university rows from json!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapShow" />
-        <activity android:name=".ChoosePosition"></activity>
+        <activity android:name=".ChooseFaculty"></activity>
+        <activity android:name=".ChooseDestination"></activity>
     </application>
 
 </manifest>
