--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name=".ChooseFaculty" />
         <activity android:name=".ChooseDestination" />
         <activity android:name=".ChooseStartingPoint" />
-        <activity android:name=".EndpointDetails"></activity>
+        <activity android:name=".MarkCard"></activity>
     </application>
 
 </manifest>
